# Http

./: CMakeLists.txt  README.md
include/Http/: Client.hpp  Connection.hpp  IServer.hpp  Server.hpp  ServerTransportLayer.hpp  TimeKeeper.hpp
src/: Client.cpp  Server.cpp
test/: CMakeLists.txt
test/src/: ClientTests.cpp  ServerTests.cpp
